# geometric_modeling

Assignment_2/: Assigment2.ipynb
Assignment_4/: Assigment4-PV.ipynb  Assigment4.ipynb  Part_1_2_4.ipynb  Part_3.ipynb  flipped_triangles  interpolated_field_hard  scalar_function
Assignment_5/: Assignment5.ipynb  Selection.ipynb
Assignment_5/data/: camel_head.label.npy  woody-hi.label.npy
project/: CMakeLists.txt  README.md  Selection.ipynb
project/GP_video/: GP_video.mlt
project/data/: Dog_v2.off  solo12.urdf
project/demos/: bbw.cpp  bbw_cyl.cpp  bbw_old.cpp  demo.cpp  dog_params.cpp  fk.cpp  tmp.cpp
project/include/: fk.hpp
project/motions/: hifive.txt  jump.txt  rearing.txt
project/results/: bound.mkv  bound_sk.mkv  jump.mkv  jump_skl.mkv  rearing.mkv  trot_back.mkv  trot_front.mkv  trot_sk.mkv  trotting.mkv
project/src/: fk.cpp
